Funcionalidade de Buscar pessoas por curso realizado